# uwu-codec

./: .gitignore  Cargo.toml  Makefile  README.md
src/: bin.rs  files.rs  lib.rs  utils.rs  uwu_bytes.rs
src/codecs/: v2.rs
src/multimedia/: image_viewer.rs  mod.rs
